--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,4 @@ exclude .gitlab-ci.yml
 global-exclude *.pyc
 include .coveragerc
 recursive-include news *.gitkeep
+recursive-include news *.feature
